<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.sort.SortActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/CheckGroupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_activity_sort_by_alphabet" />

        <RadioGroup
            android:id="@+id/alphabet_sort_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/alphabet_sort_ask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_activity_direction_ask" />

            <RadioButton
                android:id="@+id/alphabet_sort_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_activity_direction_desc" />

        </RadioGroup>

        <TextView
            style="@style/CheckGroupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sort_activity_sort_by_currency" />

        <RadioGroup
            android:id="@+id/currency_sort_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/currency_sort_ask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_activity_direction_ask" />

            <RadioButton
                android:id="@+id/currency_sort_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_activity_direction_desc" />

        </RadioGroup>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_sort_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/sort_activity_clear_sort" />

</LinearLayout>